welcome.lessons.welcome.methods.slug.SlugSnail.scala.error
SlugSnail:12: error: Unmatched closing brace '}' ignored here
 }
 ^SlugSnail:29: error: ')' expected but '}' found.
  }
  ^